# pymacros

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
data/: stress_test.xlsx  test1.xlsx
docs/: plan.md
pymacros/: __init__.py  context.py  errors.py  excel.py  procedures.py  registry.py
pymacros_cli/: __main__.py  app.py  commands.py  config.py  logging_config.py  paths.py  prompts.py
scripts/: stress_run_workbook.py
tests/: test_cli.py  test_context.py  test_excel.py  test_procedures.py  test_registry.py
